--- a/app/views/api/v1/reportes/reporte_historico_pregunta_docente.csv.erb
+++ b/app/views/api/v1/reportes/reporte_historico_pregunta_docente.csv.erb
@@ -2,7 +2,7 @@
 	@pregunta.opciones.each do |o|
 		headers.push(o.valor)
 	end
-	headers += ["Respuestas", "Inscritos", "Participación"] 
+	headers += ["Respuestas", "Inscritos", "Participación","Media"] 
 %>
 <%= CSV.generate_line headers %>
 <% @resultados.each do |pregunta_id,resultado|
@@ -24,10 +24,10 @@
 					@pregunta.opciones.each do |o|
 						arreglo_valores.push(valores[o.valor])
 					end
-					arreglo_valores += [datos["total_respuestas"],datos["total_estudiantes"],participacion]
-	%>
-	<%=		 		CSV.generate_line(arreglo_valores) %>
-	<%
+					arreglo_valores += [datos["total_respuestas"],datos["total_estudiantes"],participacion,datos["media_de_seccion"]]
+%>
+<%=			 		CSV.generate_line(arreglo_valores) %>
+<%
 				end
 			end
 		end
