eliminar saltos de linea al generar CSV

--- a/app/views/api/v1/reportes/reporte_historico_pregunta_docente.csv.erb
+++ b/app/views/api/v1/reportes/reporte_historico_pregunta_docente.csv.erb
@@ -3,9 +3,8 @@
 		headers.push(o.valor)
 	end
 	headers += ["Respuestas", "Inscritos", "Participación","Media"] 
-%>
-<%= CSV.generate_line headers %>
-<% @resultados.each do |pregunta_id,resultado|
+%><%= CSV.generate_line headers %><% 
+	@resultados.each do |pregunta_id,resultado|
 		resultado.each do |periodo,materias|
 
 			materias.each do |m,secciones|
@@ -25,9 +24,7 @@
 						arreglo_valores.push(valores[o.valor])
 					end
 					arreglo_valores += [datos["total_respuestas"],datos["total_estudiantes"],participacion,datos["media_de_seccion"]]
-%>
-<%=			 		CSV.generate_line(arreglo_valores) %>
-<%
+%><%= CSV.generate_line(arreglo_valores) %><%
 				end
 			end
 		end
