--- a/app/views/api/v1/reportes/reporte_historico_pregunta_materia.csv.erb
+++ b/app/views/api/v1/reportes/reporte_historico_pregunta_materia.csv.erb
@@ -1,3 +1,4 @@
+<%= CSV.generate_line ['Reporte', 'Histórico de Pregunta'] %><%= CSV.generate_line ['Materia:', @materia.codigo, @materia.nombre] %>
 <% headers = ['Período', 'Sección', "Código"]
 	@pregunta.opciones.each do |o|
 		headers.push(o.valor)
